kadnode (1.1.0) UNRELEASED; urgency=medium

  * fix dependency selection in OpenWrt package
  * [LPD] fix an "Address already in use" problem
  * [LPD] change message format to be compatible with common BT clients
    * 239.192.152.143 / ff15::efc0:988f are the new multicast addresses
    * KadNode now pretends to download the same torrent hash
      as the other BT clients. This is needed to be accepted as peer.

 -- mwarning <moritzwarning@web.de>  Tue, 06 Jan 2015 21:56:16 +0100

kadnode (1.0.0) unstable; urgency=medium

  * rename --ifce to --ifname, it is less obscure
  * ignore quotation marks in configuration files
  * remove finished searches with no results immediately
  * fix the number of exported addresses, the calculation was wrong
  * free all resources on (regular) shutdown
  * [AUTH] make sure to send auth requests as soon as sheduled
  * [LPD] register multicast group on all interfaces by default

 -- mwarning <moritzwarning@web.de>  Thu, 04 Dec 2014 12:03:52 +0100

kadnode (0.9.2) unstable; urgency=low

  * add FreeBSD package
  * add Windows package
  * add Windows support (via Cygwin)
  * add support for Windows services
    * add "---service-start", "--service-install" and "--service-remove"
  * fix IPv4 localhost address byte order when resolving own value
  * [NSS] add FreeBSD support
  * [NSS] fix maximum address limit per request
  * [LPD] send a multicast packet for each interface by default
  * [DNS] now answer to PTR queries for localhost address
    - some programs request a PTR record for localhost and
      time out first until they start doing A/AAA/SRV requests,
      so this will hopefully speed up other requests

 -- mwarning <moritzwarning@web.de>  Wed, 03 Dec 2014 08:19:08 +0100

kadnode (0.9.1) unstable; urgency=low

  * add --query-tld option to configure the top level domain
    used to divert DNS queries to KadNode (default is .p2p)
  * support hosts that only have IPv4 enabled