@@ -22,6 +22,10 @@ config kadnode
 ## Load and store good nodes every 24h and on start/shutdown.
 #	option peerfile '/etc/kadnode/peers.txt'
 
+## Add static peers addresses.
+#	list peer 'bttracker.debian.org:6881'
+#	list peer 'router.bittorrent.com:6881'
+
 ## Bind the DHT to this port.
 #	option port '6881'
 
