@@ -48,7 +48,7 @@ start_instance() {
 	OPTS=""
 
 	append_opts "$s" node_id user port ifname cmd_port web_port\
-		lpd_addr mode dns_port verbosity peerfile config \
+		lpd_addr mode dns_port verbosity peer peerfile config \
 		auth_add_pkey auth_add_skey value_id query_tld
 
 	append_opts_boolean "$s" lpd_disable fwd_disable
